--- a/LoyatyPointEx/src/app/components/auth/login/login.component.html
+++ b/LoyatyPointEx/src/app/components/auth/login/login.component.html
@@ -18,21 +18,21 @@
             <form [formGroup]="loginForm"  (ngSubmit)="onSubmit()" >
                
                 <div class="input-box">
-                    <input type="email" id="email"  name="email" class="form-control" formControlName="email" required>
+                    <input type="email" id="email"  name="email" class="form-control" formControlName="email" required [(ngModel)]="email">
                     <label>Email</label>
                     <div *ngIf="loginForm.get('email')?.hasError('email')">Please enter a valid email address.</div>
-                    <div *ngIf="loginForm.get('email')?.hasError('pattern')">Please enter a TUT email address.</div>
+                    <div *ngIf="loginForm.get('email')?.hasError('pattern')">Please enter an email address.</div>
                 </div>
 
                 <div class="input-box">
-                    <input type="password" id="password" placeholder="Password" class="form-control" formControlName="password" name="password" >
+                    <input type="password" id="password" placeholder="Password" class="form-control" formControlName="password" name="password" [(ngModel)]="password" >
                     <label>Password</label>
                     <div *ngIf="loginForm.get('password')?.hasError('password')">Enter valid password.</div>
                 </div>
 
                
                 
-                <button class="btn" type="submit">Login</button>
+                <button class="btn" type="submit">Login  </button>
                 <div class="login-register">
                     <p>Don't have an account? <a href="../register" class="Register-link">Register</a></p>
                 </div>
